chore: rename `fetch` route
